// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range All options selected 1`] = `
<div
  className=""
>
  <label
    className="xui-text-label xui-fieldlabel-layout"
    data-automationid="qaHook--label"
    htmlFor="testRangeId-control"
  >
    All options selected
  </label>
  <div
    className="xui-rangeslider-container containerClasses"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 12 12"
      width={16}
    >
      <path
        d="M7 5h5v2H7v5H5V7H0V5h5V0h2v5z"
        role="presentation"
      />
    </svg>
    <input
      aria-describedby="testRangeId-message"
      aria-invalid={true}
      className="xui-rangeslider xui-rangeslider-thumb-xsmall xui-rangeslider-is-invalid inputClasses"
      defaultValue="20"
      disabled={true}
      id="testRangeId-control"
      max="80"
      min="16"
      step="4"
      type="range"
    />
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 12 12"
      width={16}
    >
      <path
        d="M7 5h5v2H7v5H5V7H0V5h5V0h2v5z"
        role="presentation"
      />
    </svg>
  </div>
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid"
    data-automationid="qaHook--message"
    id="testRangeId-message"
    role="status"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 Z M7,4 L7,9 L9,9 L9,4 L7,4 Z M7,10 L7,12 L9,12 L9,10 L7,10 Z"
        role="presentation"
      />
    </svg>
    validationMessage
  </div>
</div>
`;

exports[`Range LeftElement and RightElement work 1`] = `
<div
  className=""
>
  <label
    className="xui-text-label xui-fieldlabel-layout"
    htmlFor="testRangeId-control"
  >
    svgs work
  </label>
  <div
    className="xui-rangeslider-container"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 12 12"
      width={16}
    >
      <path
        d="M7 5h5v2H7v5H5V7H0V5h5V0h2v5z"
        role="presentation"
      />
    </svg>
    <input
      aria-describedby="testRangeId-message"
      className="xui-rangeslider xui-rangeslider-thumb-medium"
      id="testRangeId-control"
      type="range"
    />
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 12 12"
      width={16}
    >
      <path
        d="M7 5h5v2H7v5H5V7H0V5h5V0h2v5z"
        role="presentation"
      />
    </svg>
  </div>
  <div
    className="xui-validation xui-validation-layout"
    id="testRangeId-message"
    role="status"
  >
    hintMessage
  </div>
</div>
`;

exports[`Range Simple case 1`] = `
<div
  className=""
>
  <div
    className="xui-rangeslider-container"
  >
    <input
      className="xui-rangeslider xui-rangeslider-thumb-medium"
      id="testRangeId-control"
      type="range"
    />
  </div>
</div>
`;

exports[`Range invalid 1`] = `
<div
  className=""
>
  <label
    className="xui-text-label xui-fieldlabel-layout"
    htmlFor="testRangeId-control"
  >
    invalid
  </label>
  <div
    className="xui-rangeslider-container"
  >
    <input
      aria-describedby="testRangeId-message"
      aria-invalid={true}
      className="xui-rangeslider xui-rangeslider-thumb-medium xui-rangeslider-is-invalid"
      id="testRangeId-control"
      max={80}
      min={16}
      type="range"
    />
  </div>
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid"
    id="testRangeId-message"
    role="status"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={16}
      viewBox="0 0 16 16"
      width={16}
    >
      <path
        d="M8,16 C3.581722,16 0,12.418278 0,8 C0,3.581722 3.581722,0 8,0 C12.418278,0 16,3.581722 16,8 C16,12.418278 12.418278,16 8,16 Z M7,4 L7,9 L9,9 L9,4 L7,4 Z M7,10 L7,12 L9,12 L9,10 L7,10 Z"
        role="presentation"
      />
    </svg>
    validationMessage
  </div>
</div>
`;

exports[`Range should be disabled 1`] = `
<div
  className=""
>
  <label
    className="xui-text-label xui-fieldlabel-layout"
    htmlFor="testRangeId-control"
  >
    disabled
  </label>
  <div
    className="xui-rangeslider-container"
  >
    <input
      className="xui-rangeslider xui-rangeslider-thumb-medium"
      disabled={true}
      id="testRangeId-control"
      max={80}
      min={16}
      type="range"
    />
  </div>
  <div
    className="xui-validation xui-validation-layout"
    id="testRangeId-message"
    role="status"
  />
</div>
`;
